working MongoDB database

--- a/ETL_datasets.ipynb
+++ b/ETL_datasets.ipynb
@@ -50,8 +50,7 @@
    "outputs": [],
    "source": [
     "def add_collection_to_mongo (collection_name, df, mongo_db_conn = mydb):\n",
-    "    collection = mongo_db_conn[collection_name]\n",
-    "    mongo_db_conn.collection.insert_many(df.to_dict('records'))\n",
+    "    mongo_db_conn[collection_name].insert_many(df.to_dict('records'))\n",
     "    return print(f'{collection_name} stored in the MongoDB database named {mydb}')"
    ]
   },
@@ -1088,7 +1087,7 @@
        "datasource                     0\n",
        "question                       0\n",
        "datavaluetype                  0\n",
-       "datavalue                  17259\n",
+       "datavalue                  17261\n",
        "stratificationcategory1        0\n",
        "stratification1                0\n",
        "locationid                     0\n",
@@ -1317,7 +1316,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>16140 rows × 12 columns</p>\n",
+       "<p>16138 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1373,7 +1372,7 @@
        "37550              Overall         29     AST1_1             %  \n",
        "37551              Overall         54     AST1_1             %  \n",
        "\n",
-       "[16140 rows x 12 columns]"
+       "[16138 rows x 12 columns]"
       ]
      },
      "execution_count": 15,
@@ -1652,7 +1651,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15861 rows × 12 columns</p>\n",
+       "<p>15859 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1708,7 +1707,7 @@
        "37550              Overall         29     AST1_1             %  \n",
        "37551              Overall         54     AST1_1             %  \n",
        "\n",
-       "[15861 rows x 12 columns]"
+       "[15859 rows x 12 columns]"
       ]
      },
      "execution_count": 18,
@@ -1934,7 +1933,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15843 rows × 12 columns</p>\n",
+       "<p>15849 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1990,7 +1989,7 @@
        "37550              Overall         29     AST1_1             %  \n",
        "37551              Overall         54     AST1_1             %  \n",
        "\n",
-       "[15843 rows x 12 columns]"
+       "[15849 rows x 12 columns]"
       ]
      },
      "execution_count": 19,
@@ -2278,7 +2277,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3033 rows × 12 columns</p>\n",
+       "<p>3035 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2334,7 +2333,7 @@
        "37550         Overall         29     AST1_1             %  \n",
        "37551         Overall         54     AST1_1             %  \n",
        "\n",
-       "[3033 rows x 12 columns]"
+       "[3035 rows x 12 columns]"
       ]
      },
      "execution_count": 21,
@@ -2472,7 +2471,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3033 rows × 5 columns</p>\n",
+       "<p>3035 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2489,7 +2488,7 @@
        "37550  2014       MO         Crude Prevalence       9.7             %\n",
        "37551  2013       WV         Crude Prevalence         9             %\n",
        "\n",
-       "[3033 rows x 5 columns]"
+       "[3035 rows x 5 columns]"
       ]
      },
      "execution_count": 22,
